# vtm-v5-discord-bot

./: .env  Cargo.toml
.github/workflows/: main.yml
migrations/2020-08-25-055542_create_vtm_user/: down.sql  up.sql
migrations/2020-08-25-055549_create_vtm_character/: down.sql  up.sql
migrations/2020-08-25-060126_create_vtm_session/: down.sql  up.sql
migrations/2020-08-25-063158_create_vtm_active_session/: down.sql  up.sql
src/: connection.rs  main.rs  models.rs  schema.rs
src/discord/: command.rs
src/util/: localisation.rs  mod.rs
src/vtm/: character.rs  die.rs  mod.rs
