[package]
name = "vtm-v5-discord-bot"
version = "0.1.0"
authors = ["Lukas Grünwald <gruenwald.lk@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["mysql"] }
dotenv = "0.15.0"
serenity = "0.8.7"
env_logger = "0.7.1"
log = "0.4"
rand = "0.7.3"
regex = "1.3.9"
lazy_static = "1.4.0"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
json-gettext = "3.2.8"
 